--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -8,6 +8,7 @@
 	{% include head.html %}
 </head>
 <body>
+	{% include header.html %}
 	<main class="content">
 		<section class="project">
 			<div class="container">
