--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -8,11 +8,12 @@
 	{% include head.html %}
 </head>
 <body>
-	{% include header.html %}
+	{% include head.html %}
 	<main class="content">
 		<section class="project">
 			<div class="container">
 				<article>
+
 					<h1>
 						<a href="{{ page.project.url }}" target="_blank" title="{{ page.project.title }}" rel="nofollow">{{ page.project.title }}</a>
 					</h1>
