--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -8,17 +8,17 @@
 	{% include head.html %}
 </head>
 <body>
-	{% include head.html %}
-	<main class="content">
-		<section class="project">
-			<div class="container">
-				<article>
-					<span class="h2">Project</span>
-					<h1>
-						<a href="{{ page.project.url }}" target="_blank" title="{{ page.project.title }}" rel="nofollow">{{ page.project.title }}</a>
-					</h1>
-					<span class="h2">Role</span>
-					{{ page.content }}
+	{% include header.html %}
+<main class="content">
+	<section class="project">
+		<div class="container">
+			<article>
+				<span class="h2">Project Title</span>
+				<h1>
+					<a href="{{ page.project.url }}" target="_blank" title="{{ page.project.title }}" rel="nofollow">{{ page.project.title }}</a>
+				</h1>
+				<span class="h2">Role</span>
+				{{ page.content }}
 					<div class="project-meta">
 						<span class="h2">Technologies</span>
 						<p>{{ page.project.tech }}</p>
