--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -13,12 +13,13 @@
 	<section class="project">
 		<div class="container">
 			<article>
-				<span class="h2"></span>
+				<div>
 				<h1>
 					<a target="_blank" title="{{ page.project.title }}" rel="nofollow">{{ page.project.title }}</a>
 				</h1>
+				<div>
 				{{ page.content }}
-			</article>
+				</article>
 				<aside>
 					<ul>
 						{% for image in page.images %}
