--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -13,11 +13,11 @@
 	<section class="project">
 		<div class="container">
 			<article>
-				<span>   </span>
+				<span class="h2"> Publications </span>
 				<h1>
 					<a target="_blank" title="{{ page.project.title }}" rel="nofollow">{{ page.project.title }}</a>
 				</h1>
-				<span>   </span>
+				<span class="h2"></span>
 				{{ page.content }}
 				</article>
 				<aside>
