--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -14,6 +14,7 @@
 		<div class="container">
 			<article>
 				<span class="h2"> Publications </span>
+				<span class="h2"></span>
 				{{ page.content }}
 				</article>
 				<aside>
