--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,5 +10,11 @@
 				<li><a title="Twitter" href="{{ site.twitter }}" target="_blank">Twitter</a></li>
 			</ul>
 		</section>
+		<section class="follow">
+			<h2>Follow</h2>
+			<ul>
+				<li><a title="CV" href="{{ site.CV }}" target="_blank">CV</a></li>
+			</ul>
+		</section>
 	</div>
 </footer>
