--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -13,8 +13,10 @@
 	<section class="project">
 		<div class="container">
 			<article>
-				<span class="h2"> Publications </span>
-				<span class="h1"></span>
+			<h1>
+				<a target="_blank" title="{{ page.project.title }}" rel="nofollow">{{ page.project.title }}</a>
+			</h1>
+			<span class="h1"></span>
 				{{ page.content }}
 				</article>
 				<aside>
