--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -30,7 +30,9 @@
 .content {
 	background: $color-white;
 	padding: 7rem 0 0;
+	margin-top: 40rem;
 	margin-bottom: 31.24rem;
+	font-style: normal;
 	position: relative;
 	top: 0;
 	left: 0;
