--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -14,7 +14,9 @@
 		<div class="container">
 			<article>
 			<h1><target="_blank" title="{{ page.project.title }}" rel="nofollow">{{ page.project.title }}</h1>
-				{{ page.content }}
+			<div>
+				<span style="font-weight: regular;">{{ page.content }}</span>
+			</div>
 			</article>
 				<aside>
 					<ul>
