--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -15,7 +15,7 @@
 			<article>
 			<h1><target="_blank" title="{{ page.project.title }}" rel="nofollow">{{ page.project.title }}</h1>
 			<div>
-				<span style="font-weight: regular;">{{ page.content }}</span>
+				<span style="font-weight: normal;">{{ page.content }}</span>
 			</div>
 			</article>
 				<aside>
