--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -9,22 +9,25 @@
 </head>
 <body>
 	{% include header.html %}
-<main class="content">
-	<section class="project">
-		<div class="container">
-			<article>
-			<h1><target="_blank" title="{{ page.project.title }}" rel="nofollow">{{ page.project.title }}</h1>
-			<span class="h2">Role</span>
+	<main class="content">
+		<section class="project">
+			<div class="container">
+				<article>
+					<span class="h2">Project Title</span>
+					<h1>
+						<a href="{{ page.project.url }}" target="_blank" title="{{ page.project.title }}" rel="nofollow">{{ page.project.title }}</a>
+					</h1>
+					<span class="h2">Role</span>
 					{{ page.content }}
 					<div class="project-meta">
 						<span class="h2">Technologies</span>
 						<p>{{ page.project.tech }}</p>
 						<span class="h2">Agency</span>
-						<p><a title="{{ page.agency.title }}" target="_blank" rel="nofollow">{{ page.agency.title }}</a></p>
+						<p><a title="{{ page.agency.title }}" href="{{ page.agency.url }}" target="_blank" rel="nofollow">{{ page.agency.title }}</a></p>
 						<span class="h2">Year</span>
 						<p>{{ page.agency.year }}</p>
 					</div>
-			</article>
+				</article>
 				<aside>
 					<ul>
 						{% for image in page.images %}
