--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -13,7 +13,9 @@
 		<section class="project">
 			<div class="container">
 				<article>
-					<h1><target="_blank" title="{{ page.project.title }}" rel="nofollow">{{ page.project.title }}</a></h1>
+					<h1>
+						<target="_blank" title="{{ page.project.title }}" rel="nofollow">{{ page.project.title }}</a>
+					</h1>
 					<span class="h2">Role</span>
 					{{ page.content }}
 					<div class="project-meta">
