--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -14,7 +14,7 @@
 			<div class="container">
 				<article>
 					<h1>
-						<target="_blank" title="{{ page.project.title }}" rel="nofollow">{{ page.project.title }}</a>
+						<a target="_blank" title="{{ page.project.title }}" rel="nofollow">{{ page.project.title }}</a>
 					</h1>
 					{{ page.content }}
 				</article>
