--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -211,8 +211,14 @@
 		}
 	}
 
+	h1 {
+		a {
+			margin-bottom: 20rem;
+		}
+	}
+
 	li {
-		margin-bottom: 19rem;
+		margin-bottom: 0rem;
 
 		&:last-child {
 			margin-bottom: 0;
