--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -15,6 +15,7 @@
 				<article>
 					<h1><a target="_blank" title="{{ page.project.title }}" rel="nofollow">{{ page.project.title }}</a>
 					</h1>
+					<span class="h2">Role</span>
 					{{ page.content }}
 				</article>
 				<aside>
