--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -13,7 +13,7 @@
 		<section class="project">
 			<div class="container">
 				<article>
-					<h1><target="_blank" title="{{ page.project.title }}" rel="nofollow">{{ page.project.title }}</h1>
+					<h1>{{ page.project.title }}</h1>
 					{{ page.content }}
 				</article>
 				<aside>
