--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -26,8 +26,8 @@
 @font-face {
 	font-family: 'Poppins';
 	font-style: normal;
-	font-weight: 600;
-	src: local('Poppins SemiBold'), local('Poppins-SemiBold'), url(/assets/fonts/pxiByp8kv8JHgFVrLEj6Z1JlFd2JQEl8qw.woff2) format('woff2');
+	font-weight: 300;
+	src: local('Poppins-Light'), local('Poppins-Light'), url(/assets/fonts/pxiByp8kv8JHgFVrLEj6Z1JlFd2JQEl8qw.woff2) format('woff2');
 	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
