--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -14,7 +14,7 @@
 			<div class="container">
 				<article>
 					<h1>{{ page.project.title }}</h1>
-					{{ page.content }}
+					<h3>{{ page.content }}<h3>
 				</article>
 				<aside>
 					<ul>
