--- a/assets/scss/_core.scss
+++ b/assets/scss/_core.scss
@@ -39,8 +39,18 @@ h3,
 	color: $color-black;
 	font-family: $font-poppins;
     font-size: 1.8rem;
-    font-weight: 300;
+    font-weight: 400;
     line-height: 1.6;
+    margin: 0;
+}
+
+h4,
+.h4 {
+	color: $color-black;
+	font-family: $font-poppins;
+    font-size: 1.8rem;
+    font-weight: 300;
+    line-height: 2;
     margin: 0;
 }
 
